# Competitive-coding

./: CMakeLists.txt  README.md  Template.cpp  center_tree.cpp  learn.md
Adv_DS/: DynamicConnect.cpp  DynamicConnect.md  treap.cpp  treap.md  trie(bit).md  veniceset.cpp  veniceset.md
Bela Ciao/: a.cpp
Brute Search/: meet_in_the_middle.cpp  subset.cpp
DP/: Digitdp.cpp  LIS.cpp  bounded_knapsack.cpp  dp.cpp  matrixexp.cpp
DP/DP_Optimizations/DNC_DP/: ciel.cpp  subarrayk.cpp
DP/DP_Optimizations/Knuth/: Knuth_div.cpp
DP/DP_tree/rerooting/: Max_white_subtree.cpp  Tree_with_max_cost.cpp  tree_painting.cpp
DP/DigitDP/: Digitdp.md
DP/DigitDP/Digitdp_ques/: 369numbers.cpp  AOPN.cpp  MPRODMUL.cpp  MaximumProduct.cpp  Pattern110.cpp  classy.cpp  encoding.cpp  (+4 more)
DP/digitdp_ques/: 369numbers.cpp  MaximumProduct.cpp  classy.cpp
DP_tree/rerooting/: Max_white_subtree.cpp  Tree_with_max_cost.cpp  tree_distances2.cpp  tree_painting.cpp
DS/: Fenwick trees.cpp  Mo.cpp  segtree(non-recursive).cpp  sparse_table.cpp  sqrtdecomp.cpp  trie(bit).cpp  veniceset.cpp
Essentials/: ASCII.cpp  FAST MODULAR EXPONENTION.cpp  bigint.cpp  coord compression.cpp  fastexpo.cpp  ncr.cpp  no of divisors.cpp  sumofdiv.cpp  ternary.cpp  totient.cpp
Flows/: dinic.cpp  flow_path.cpp  max_match.cpp  max_match_N^3.cpp  mincut.cpp
Game/: Game.cpp  Game.md
Geometry/: convexhull.cpp
Graphs/: Bipartite.cpp  Dijkstra.cpp  Kruskal.cpp  LCA.cpp  bellman.cpp  bfs.cpp  cycle.cpp  dfs.cpp  floyd.cpp  grith.cpp  hierholzers-algorithm.cpp  knight.cpp  prufer.cpp  scc.cpp  subtree.cpp
Graphs/Bridges/: bridge.cpp
Graphs/Components/: 2D-DSU.cpp  2SAT.cpp  DSU.cpp
Graphs/Cut_vertices/: cut.cpp
Graphs/DAG/: topo.cpp
Graphs/Eulerian/: hierholzers-algorithm.cpp
Graphs/MST/: Kruskal.cpp
Graphs/Shortest_paths/: Dijkstra.cpp  bellman.cpp  bellman.md  dijsktra_dig.cpp  floyd.cpp
Graphs/Traversals/: Bipartite.cpp  cycle.cpp  dfs.cpp
Graphs/Trees/: Centroid.cpp  LCA.cpp  mo_trees.cpp
Maths/: fastexpo.cpp  linear_sieve.cpp  linear_sieve.md  mobius.md  ncr.cpp  ncr.md  no of divisors.cpp  sumofdiv.cpp  totient.cpp  totient.md
Polynomials/: NTT_any_mod.cpp
STL/: algolib.cpp  algolib.md  rand.cpp
Search/: BinSearch.md  Binarysearch.cpp  bfs.cpp  bfs.md  dfs.md  meet_in_the_middle.cpp  ternary.cpp  ternary.md
Segtree_Fenwick/: 2D-fenwick_tree.cpp  Fenwick trees.cpp  Fenwick.md  segtree(non-recursive).cpp  segtree.md
Sqrt/: mo_hilbert.cpp
Stack_Queue/: max_histogram.cpp  max_one_rectangle.cpp
Strings/: KMP.cpp  Reverse_BWT.cpp  Z_algo.cpp  dfa.cpp  hashing.cpp  manacher.cpp  suffix_array.cpp  suffix_array_fast.cpp  suffix_lcp.cpp  trie.cpp  trie.md
Techs/: compress.cpp
Trees/: Centroid.cpp  TreeDSU.cpp  diameter.cpp  lca_bin.cpp  mo_tree_hilbert.cpp  mo_trees.cpp  prufer.cpp  subtree.cpp
bagoons/: a.txt
digitdp/: 369numbers.cpp  AOPN.cpp  MaximumProduct.cpp  Pattern110.cpp  classy.cpp  encoding.cpp  gone.cpp  lucifer.cpp  magicnumbers.cpp  raone.cpp
