cmake_minimum_required(VERSION 3.16)
project(Competitive_coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(Competitive_coding
        Brute_Search/meet_in_the_middle.cpp
        Brute_Search/subset.cpp
        DP/digitdp_ques/369numbers.cpp
        DP/digitdp_ques/AOPN.cpp
        DP/digitdp_ques/classy.cpp
        DP/digitdp_ques/encoding.cpp
        DP/digitdp_ques/gone.cpp
        DP/digitdp_ques/lucifer.cpp
        DP/digitdp_ques/magicnumbers.cpp
        DP/digitdp_ques/MaximumProduct.cpp
        DP/digitdp_ques/MPRODMUL.cpp
        DP/digitdp_ques/Pattern110.cpp
        DP/digitdp_ques/raone.cpp
        DP/DP_tree/rerooting/Max_white_subtree.cpp
        DP/DP_tree/rerooting/tree_distances2.cpp
        DP/DP_tree/rerooting/tree_painting.cpp
        DP/DP_tree/rerooting/Tree_with_max_cost.cpp
        DP/bounded_knapsack.cpp
        DP/Digitdp.cpp
        DP/dp.cpp
        DP/LIS.cpp
        DP/matrixexp.cpp
        DS/2D-fenwick_tree.cpp
        "DS/Fenwick trees.cpp"
        DS/Mo.cpp
        DS/mo_hilbert.cpp
        "DS/segtree(non-recursive).cpp"
        DS/sparse_table.cpp
        DS/sqrtdecomp.cpp
        "DS/trie(bit).cpp"
        Flows/dinic.cpp
        Flows/flow_path.cpp
        Flows/max_match.cpp
        Flows/max_match_N^3.cpp
        Flows/mincut.cpp
        Game/Game.cpp
        Geometry/convexhull.cpp
        Graphs/Components/2D-DSU.cpp
        Graphs/Components/DSU.cpp
        Graphs/Components/scc.cpp
        Graphs/DAG/topo.cpp
        Graphs/Eulerian/hierholzers-algorithm.cpp
        Graphs/Kinght_tour/knight.cpp
        Graphs/MST/Kruskal.cpp
        Graphs/Shortest_paths/bellman.cpp
        Graphs/Shortest_paths/Dijkstra.cpp
        Graphs/Shortest_paths/dijsktra_dig.cpp
        Graphs/Shortest_paths/floyd.cpp
        Graphs/Traversals/bfs.cpp
        Graphs/Traversals/Bipartite.cpp
        Graphs/Traversals/cycle.cpp
        Graphs/Traversals/dfs.cpp
        Graphs/Traversals/grith.cpp
        Libraries/bigint.cpp
        Maths/fastexpo.cpp
        Maths/linear_sieve.cpp
        Maths/ncr.cpp
        "Maths/no of divisors.cpp"
        Maths/sumofdiv.cpp
        Maths/totient.cpp
        search/Binarysearch.cpp
        search/ternary.cpp
        Stack_Queue/max_histogram.cpp
        Stack_Queue/max_one_rectangle.cpp
        STL/algolib.cpp
        STL/ASCII.cpp
        STL/rand.cpp
        Strings/dfa.cpp
        Strings/hashing.cpp
        Strings/KMP.cpp
        Strings/manacher.cpp
        Strings/suffix_array.cpp
        Strings/suffix_array_fast.cpp
        Strings/suffix_lcp.cpp
        Strings/Z_algo.cpp
        Techs/compress.cpp
        Trees/center_tree.cpp
        Trees/Centroid.cpp
        Trees/diameter.cpp
        Trees/LCA.cpp
        Trees/lca_bin.cpp
        Trees/mo_tree_hilbert.cpp
        Trees/mo_trees.cpp
        Trees/prufer.cpp
        Trees/subtree.cpp
        Template.cpp)
